# Weaver_Os

./: .gitignore  CHANGELOG.md  CLAIM_DOWNGRADE_LOG.md  CONTRIBUTING.md  Crypto Key  E3.5_REPRODUCTION_KIT_SPEC.md  GOVERNANCE.md  HANDOFF_LABYRINTH_OS_v9_FINAL.md  INVARIANTS.md  LICENSE  MVP  MVP0_REPLAY_CHECKLIST.md  Makefile  PORTFOLIO_EVIDENCE_STATUS.md  README.md  REGISTRY.md  REGISTRY_SUPERSESSION_LEDGER.md  ROADMAP.md  SECURITY.md  authority_ledger.json  inject_ledger.py  published_manifest.json  pyproject.toml  requirements.txt  verify_attestations.py
.github/: CODEOWNERS  pull_request_template.md
audit-package/: AUDIT_PACKAGE.md  CHAIN_INTEGRITY_REPORT.md  CHANGELOG.md  CLAIMS_AND_EVIDENCE.md  CLAIM_TRACEABILITY_MATRIX.md  E3_1_RECEIPTED_REPLAY_PACKAGE.md  ENVIRONMENT_MANIFEST.md  EVIDENCE_MANIFEST.md  FAILURE_AND_COUNTEREXAMPLE_LOG.md  FINAL_CONSOLIDATED_HANDOFF.md  HANDOFF_NOTE.md  LIMITATIONS_AND_NONCLAIMS.md  PACKAGE_INDEX.md  PRESERVATION_REGISTRY.md  PRO_HANDOFF_PACKAGE.md  README.md  RELEASE_CHECKLIST.md  REPLAY_REPORT.md  REPOSITORY_MANIFEST.md  REPRODUCTION_INSTRUCTIONS.md  REVIEWER_CHECKLIST.md  REVIEWER_CONCLUSION_TEMPLATE.md  SHA256SUMS.txt  VERIFICATION_REPORT.md  VERIFY.md  WITNESS_ATTESTATIONS.md
cathedral_core/: __init__.py  constitution_loader.py
chronicle-raft/: http_attestation_snippet.go
constitution/: CONSTITUTIONAL_INVARIANTS.md  negative_invariants.yaml
delta717/: README.md
demo/: README.md  boundary_integrity_demo.py  run_demo.sh
docs/: CATHEDRAL_AI_NATIVE_SPINE.md  ENFORCED_VS_METADATA.md  FINAL_RATIFIED_STATE_AUDIT_ADDENDUM.md  FIRST_FAILURE_ANALYSIS.md  HANDOFF_vFINAL.md  PROMOTION_RULES.md  RELEASE_READINESS.md  SDA_WEAVER_EVIDENCE_SPINE_INTEGRATION.md  WEAVER_OS_FINAL_PROFESSIONAL_HANDOFF_PACKAGE.md  paper_related_work.md  sda_integration_registry.yaml
generation3/: README.md
manifests/: MUST_KEEP_REGISTRY.v1.json
omega/: README.md
operator-kit/: README.md  daily_operator_loop.md  local_vs_cloud_routing_policy.md  scheduled_task_manifest.md  weekly_audit_loop.md  workspace_skeleton.md
physis/: README.md
policy/: signed_verifier_adapter.py
receipt/: __init__.py
receipts/: README.md
schemas/: published_manifest.schema.json  receipt.schema.json  triad_event.schema.json  triad_receipt.schema.json
sis/: SIS_STEWARD.md
tests/: test_triad_ledger.py  test_triad_schemas.py
tooling/: generate_gate1_receipt.py
triadic_controls/: __init__.py  ledger.py
validation/: CROSS_SYSTEM_VALIDATION_AGENDA.md
(+149 files in other folders)
