[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weaver-os"
version = "0.5.0"
description = "Deterministic verification and replay substrate for bounded probabilistic cognition."
requires-python = ">=3.10"
dependencies = [
  "cryptography>=42.0.0",
  "jsonschema>=4.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["triadic_controls*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
