[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weaver-os"
version = "0.5.0"
description = "Deterministic verification and replay substrate for bounded probabilistic cognition."
requires-python = ">=3.10"
dependencies = [
  "cryptography>=42.0.0",
  "jsonschema>=4.0.0",
  "PyJWT>=2.8"
]

[project.optional-dependencies]
dev = [
  "build>=1.2.0",
  "mypy>=1.10.0",
  "pytest>=7.0.0",
  "ruff>=0.5.0"
]

[project.scripts]
weaver-release-guard = "weaver_release_guard.cli:main"

[tool.setuptools.packages.find]
where = [".", "src"]
include = ["triadic_controls*", "weaver_release_guard*"]

[tool.setuptools.package-data]
triadic_controls = ["schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
